
New features:

- The license has changed. Instead of the LGPL cgkit now uses the
  MPL/GPL/LGPL tri-license (this applies to the Python package "cgkit").
  The Maya package und plugin uses the MPL.
- New class MayaSpotLight that approximates spot lights as they appear
  in Maya. The object is created by the ma importer.

Bug fixes/enhancements:

- simplecpp: The built-in preprocessor is now a bit more capable than 
  before (but it's still not a full replacement for a true preprocessor).
  It now handles line-continuation, preprocessor directives and macros
  that do not take arguments.
- setup.py: The setup script doesn't check for the Boost.Python header
  anymore because the test didn't take the built-in paths (such as
  /usr/include) into account.
- quat: By default, the slerp() function now always interpolates along
  the shortest path. The function has a new optional argument "shortest"
  (default: True) that controls this behavior. If you set shortest to
  False you will get the previous behavior where it depends on the
  quaternions if you get the shortest or longest path (you can switch
  between those paths by negating one of the quaternions).
  This fixes "bug" 1488467.
- Wherever a wrapped C++ function was expecting a vec3/vec4 as input it 
  is now also possible to pass a sequence with 3/4 floats.
- RMShader: Array parameters can now be processed as well.
- A Globals section can now appear more than once without that it resets
  some of the scene values (like the up vector or handedness).
- The built-in materials (GLMaterial, Material3DS, OBJMaterial) can now
  also be used for baking.
- Bugfix: When baking maps, the transformation of the object was ignored.
  This led to incorrect surface shading when the transformation was 
  anything else than the identity.
- WorldObjects now support comparison (i.e. two WorldObject wrappers that
  reference the same C++ object will now appear as identical)